# markdown-viewer-but-better

./: .gitignore  Cargo.toml  Claude.md  DEBUG_NOTES.md  FIXED_SUMMARY.md  Trunk.toml  index.html  test.md
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: file_selector.rs  markdown_viewer.rs  mod.rs
src/utils/: markdown.rs
