[package]
name = "markdown-viewer-but-better"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
pulldown-cmark = "0.12"
ammonia = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["KeyboardEvent"] }
gloo-utils = "0.2"
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "markdown-viewer-but-better"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
